# osc

./: CMakeLists.txt
ch2/: .myjiffies.ko.cmd  .myjiffies.mod.o.cmd  .myjiffies.o.cmd  .mysec.ko.cmd  .mysec.mod.o.cmd  .mysec.o.cmd  .simple.o.cmd  Makefile  hello.ko  modules.order  myjiffies.c  myjiffies.ko  myjiffies.mod.c  mysec.c  mysec.ko  mysec.mod.c  simple.c  simple.ko  simple.mod.c
ch2/.tmp_versions/: myjiffies.mod  mysec.mod
ch3/book/: a.out  mymkfifo.c  pipe_example.c  share_mory_between_threads.c
ch3/exercise/: 3.19.cpp  3.19_v2.cpp  a.out
ch3/project/b/: .taskinf.ko.cmd  .taskinf.mod.o.cmd  .taskinf.o.cmd  Makefile  modules.order  task_inf.cpp  taskinf.c  taskinf.ko  taskinf.mod.c
ch3/project/b/.tmp_versions/: taskinf.mod
tmp/tmp.gThjLgDU8E/: main.cpp
tmp/tmp.kxKlejUCvl/: main.cpp
tmp/tmp.yOxARSf3OW/: CMakeLists.txt
